<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.cetsoft</groupId>
  <version>0.3.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>imcache</name>
  <artifactId>imcache-parent</artifactId>
  <url>http://github.com/Cetsoft/imcache</url>
  <description>Imcache is a Java Caching Library. It supports various kinds of caching models that
    have been applied so far. Imcache intends to speed up applications by providing a means to
    manage cached data. It offers solutions ranging from small applications to large scale
    applications.
  </description>

  <modules>
    <module>imcache</module>
    <module>imcache-examples</module>
    <module>imcache-spring</module>
    <module>imcache-heap</module>
    <module>imcache-offheap</module>
    <module>imcache-core</module>
    <module>imcache-redis</module>
  </modules>

  <properties>
    <org.springframework.version>5.1.9.RELEASE</org.springframework.version>
    <mockito.version>1.8.4</mockito.version>
    <junit.version>4.13.1</junit.version>
    <sourceEncoding>UTF-8</sourceEncoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>
  <scm>
    <connection>scm:git:git@github.com:Cetsoft/imcache.git</connection>
    <developerConnection>scm:git:git@github.com:Cetsoft/imcache.git</developerConnection>
    <url>https://github.com/Cetsoft/imcache</url>
    <tag>imcache-0.1.2</tag>
  </scm>
  <developers>
    <developer>
      <name>Yusuf Aytas</name>
      <organization>Cetsoft</organization>
      <email>yusufaytas@gmail.com</email>
      <organizationUrl>https://www.cetsoft.com</organizationUrl>
      <url>https://www.yusufaytas.com</url>
      <roles>
        <role>Software Engineer</role>
      </roles>
    </developer>
  </developers>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>3.0</version>
        <configuration>
          <header>license-header.txt</header>
          <properties>
            <owner>Cetsoft</owner>
            <email>yusufaytas@gmail.com</email>
            <project.inceptionYear>2013</project.inceptionYear>
          </properties>
          <excludes>
            <exclude>**/README</exclude>
            <exclude>src/test/resources/**</exclude>
            <exclude>src/main/resources/**</exclude>
            <exclude>**/*.xml</exclude>
            <exclude>.mvn/**</exclude>
            <exclude>mvnw.cmd</exclude>
            <exclude>mvnw</exclude>
            <exclude>LICENSE</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M3</version>
        <configuration>
          <forkCount>3</forkCount>
          <reuseForks>true</reuseForks>
          <argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-scm-plugin</artifactId>
            <version>1.8.1</version>
          </dependency>
        </dependencies>
      </plugin>
      <!--<plugin>-->
        <!--<groupId>org.apache.maven.plugins</groupId>-->
        <!--<artifactId>maven-gpg-plugin</artifactId>-->
        <!--<version>1.6</version>-->
        <!--<executions>-->
          <!--<execution>-->
            <!--<id>sign-artifacts</id>-->
            <!--<phase>verify</phase>-->
            <!--<goals>-->
              <!--<goal>sign</goal>-->
            <!--</goals>-->
          <!--</execution>-->
        <!--</executions>-->
      <!--</plugin>-->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.4</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>post-unit-test</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eluder.coveralls</groupId>
        <artifactId>coveralls-maven-plugin</artifactId>
        <version>4.3.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.1.0</version>
      </plugin>
    </plugins>
  </build>
  <organization>
    <name>Cetsoft</name>
    <url>http://cetsoft.com/</url>
  </organization>
  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.github.ben-manes.caffeine</groupId>
        <artifactId>caffeine</artifactId>
        <version>2.8.0</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-core</artifactId>
        <version>${org.springframework.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-beans</artifactId>
        <version>${org.springframework.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-context</artifactId>
        <version>${org.springframework.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-tx</artifactId>
        <version>${org.springframework.version}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-all</artifactId>
        <version>${mockito.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cetsoft</groupId>
        <artifactId>imcache</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cetsoft</groupId>
        <artifactId>imcache-examples</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cetsoft</groupId>
        <artifactId>imcache-spring</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cetsoft</groupId>
        <artifactId>imcache-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cetsoft</groupId>
        <artifactId>imcache-heap</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cetsoft</groupId>
        <artifactId>imcache-offheap</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cetsoft</groupId>
        <artifactId>imcache-redis</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>